--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+  <script src="//code.jivosite.com/widget/y0s3klmvOn" async></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
