feat(coverage): migrate from leaflet to mapbox-gl for coverage map
- Replace leaflet with mapbox-gl for improved performance and features
- Add map style selector and center button for better UX
- Implement environment configuration for mapbox token
- Update tests and dependencies accordingly
- Add script to generate env.js from MAPBOX_TOKEN

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" defer></script>
   <script>
     (function(d,t) {
       var BASE_URL="https://app.chatwoot.com";
@@ -30,9 +28,9 @@
       }
     })(document,"script");
   </script>
-  
+  <script src="assets/env.js"></script>
 </head>
-<body class="mat-typography">
+<body>
   <app-root></app-root>
 </body>
 </html>
